ghc-4335c07/testsuite/tests/rename/should_compile/rn010.hs
module Imp100 where
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10
import {-# SOURCE #-} Int10

