ghc-4335c07/testsuite/tests/rename/should_fail/RnStaticPointersFail01.hs
{-# LANGUAGE StaticPointers #-}

module RnStaticPointersFail01 where

f x = static x
